# cu-su-whatsapp-business-platform

./: .gitignore  AI_IMPLEMENTATION_SUMMARY.md  CODE_STRUCTURE_REVIEW.md  CURSOR_PAGINATION_README.md  Dockerfile  ENHANCED_AGENT_IMPLEMENTATION.md  ERROR_HANDLING_IMPROVEMENTS.md  FEATURES.md  HYBRID_RETRIEVER_README.md  LICENSE  MESSAGE_POSITIONING_FIX_SUMMARY.md  OPTIMISTIC_MESSAGES.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  RAG_CONSOLIDATION_SUMMARY.md  README.md  RESTRUCTURING_COMPLETE_SUMMARY.md  Rag-Implementation.ipynb  SENTIMENT_ANALYSIS_README.md  SESSION_MANAGEMENT_FIXES_SUMMARY.md  TAGS_ENDPOINT_FIX_SUMMARY.md  TAGS_FLOW_REDESIGN_SUMMARY.md  TAGS_FRONTEND_FIXES_SUMMARY.md  TAGS_FRONTEND_IMPROVEMENTS_SUMMARY.md  TAGS_IMPLEMENTATION_SUMMARY.md  TAGS_ROUTING_FIX_SUMMARY.md  TAGS_TESTING_IMPLEMENTATION_SUMMARY.md  TAG_FIXES_IMPLEMENTATION_SUMMARY.md  UNREAD_BANNER_FIX_SUMMARY.md  UNREAD_MESSAGES_BANNER_PERSISTENCE_FIX.md  UNREAD_MESSAGES_IMPLEMENTATION_SUMMARY.md  WEBHOOK_SETUP_GUIDE.md  WHATSAPP_SETUP_GUIDE.md  WRITER_AGENT_ARCHITECTURE.md  WRITER_AGENT_FIXES_SUMMARY.md  debug_login.py  debug_rag_content.py  docker-compose.yml  fix_and_test_retriever.py  fix_message_timestamps.py  intro_machine_learning.ipynb  (+21 more)
.cursor/rules/: ai-agent-rules.mdc  app-context-rules.mdc  backend-development-rules.md  backend-rules.mdc  frontend-development-rules.md  frontend-rules.mdc  frontend-styling-rules.mdc  general-rules.mdc  whatsapp-project-rules.mdc
RAG_data/: adn_rag_base_full_v1_3.csv
app/: config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  auth_routes.py  websocket.py  whatsapp.py
app/config/: error_codes.py
app/core/: config.py  error_handling.py  logger.py  middleware.py  security.py  utils.py
app/db/: chat_platform_db.py  client.py  helpers.py  mongo.py
app/db/models/: __init__.py  base.py  conversation.py  message.py  user.py  user_model.py
app/db/optimizations/: conversation_indexes.py
app/db/schemas/: message_in.py
app/schemas/: __init__.py  auth.py  auth_schema.py  user_schema.py
app/schemas/ai/: writer_response.py
app/schemas/auth/: __init__.py  permission.py  role.py  user.py
app/schemas/business/: __init__.py  company_profile.py  department.py
app/schemas/chat/: __init__.py  message.py  message_in.py  message_out.py
app/schemas/conversations/: history.py  participant.py
app/schemas/system/: __init__.py  audit_log.py
app/schemas/whatsapp/: __init__.py  webhook.py
app/scripts/: seed_tags.py
app/services/: __init__.py  automation_service.py  base_service.py  database_service.py  websocket_service.py  whatsapp_service.py
app/services/ai/: __init__.py  agent_service.py  config.py  memory_service.py
app/services/audit/: audit_service.py  user_management.py
app/services/auth/: __init__.py  auth_service.py  permission_service.py  role_service.py  user_service.py
app/services/business/: __init__.py  department_service.py
app/services/cache/: redis_service.py
app/services/email/: email_sender.py
app/services/system/: __init__.py  audit_service.py  database_service.py
app/services/websocket/: __init__.py  websocket_service.py
app/services/whatsapp/: __init__.py  automation_service.py  tag_service.py  whatsapp_service.py
docs/: email_integration.md
examples/: email_integration_example.py
frontend/: README.md  SCSS_SETUP.md  TEST_MESSAGING.md  eslint.config.mjs  instrumentation.ts  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.json.save
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/auth/: AuthWrapper.tsx
frontend/components/chat/: MessageBubble.tsx  MessageComposer.tsx  TypingIndicator.tsx
frontend/components/conversations/: NewConversationModal.tsx
frontend/components/feedback/: ErrorBoundary.tsx  NotificationSystem.tsx
frontend/components/forms/: FormField.tsx
frontend/components/layout/: Header.tsx
frontend/components/providers/: Providers.tsx
frontend/components/theme/: ThemeToggle.tsx
frontend/components/ui/: Avatar.tsx  Card.tsx  Dialog.tsx  Input.tsx  Pagination.tsx  Select.tsx  Toast.tsx
frontend/hooks/: useDashboardWebSocket.ts  useWebSocket.ts
frontend/lib/: config.ts  dashboardWebsocket.ts  http.ts  store.ts  utils.ts  websocket.ts  ws.ts
frontend/src/app/: globals.css  globals.scss  layout.legacy.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useDashboardWebSocket.ts  useDebounce.ts  useHistoryPanel.ts  useWebSocket.ts
frontend/src/lib/: auth.ts  bff.ts  branding.ts  config.ts  dashboardWebsocket.ts  env.ts  http.ts  store.ts  timezone.ts  websocket.ts  ws.ts
frontend/src/styles/: _animations.scss  _mixins.scss  _typography.scss  _variables.scss
frontend/test/unit/: timezone.test.ts  (+1 more)
other/: ADN_RAG_Base_v1.csv  IPTV_Channels_Only__Exact_Names__-_Preview(1).csv  IPTV_Channels_v1.csv
scripts/: insert_test_tags.py
tests/: README.md  insert_test_user.py  test_auth_flow.py  test_auth_services.py  test_email_integration.py  test_main.py  test_message_read_status.py  test_session_invalidation.py  test_tags_simple.py  test_unread_messages.py  test_unread_messages_banner.py  test_unread_messages_banner_persistence.py  test_webhook_endpoints.py  test_websocket_message_read.py  test_whatsapp_send.py
tests/ai/: README.md  README_RAG_TESTS.md  __init__.py  run_all_tests.py  test_ai_agent.py  test_conversation_context.py  test_rag_basic.py  test_rag_comprehensive.py  test_rag_interactive.py  test_writer_agent.py
tests/audit/: test_audit_service.py  test_get_logs.py
tests/conversations/: test_claim_conversation.py  test_conversations.py  test_quick_add_tags.py  test_tags.py
tests/core/: test_main.py  test_session_management.py
tests/db_fixes/: README.md  fix_conversation_index.py  fix_message_index.py
tests/db_users/: README.md  insert_normal_test_user.py  insert_test_user.py  role_permission_manager.py  user_role_manager.py
tests/features/: test_messages_cursor_pagination.py
(+387 files in other folders)
